// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.std.core.types;

option go_package = "namespacelabs.dev/foundation/std/core/types";

import "schema/runtime/config.proto";

message LivenessCheckArgs {}
message ReadinessCheckArgs {}
message DebugHandlerArgs {}
message ServerInfoArgs {}

message ServerInfo {
    string                             server_name = 1;
    string                             env_name    = 2;
    string                             env_purpose = 4;
    foundation.schema.runtime.BuildVCS vcs         = 5;

    repeated foundation.schema.runtime.SecretChecksum secret_checksum = 6;

    reserved 3;
}
